Password recovery email feature added

--- a/src/email-templates/src/reset_password.mjml
+++ b/src/email-templates/src/reset_password.mjml
@@ -1,16 +1,32 @@
 <mjml>
-  <mj-body background-color="#fafbfc">
-    <mj-section background-color="#fff" padding="40px 20px">
+  <mj-head>
+    <mj-title>Recuperación de Contraseña</mj-title>
+    <mj-attributes>
+      <mj-all font-family="Arial, Helvetica, sans-serif" />
+    </mj-attributes>
+    <mj-font name="Arial" href="https://fonts.googleapis.com/css?family=Arial" />
+    <mj-preview>Código de recuperación de contraseña</mj-preview>
+  </mj-head>
+  <mj-body background-color="#f5f5f5">
+    <mj-section background-color="#ffffff" padding="40px 20px">
       <mj-column vertical-align="middle" width="100%">
-        <mj-text align="center" padding="35px" font-size="20px" font-family="Arial, Helvetica, sans-serif" color="#333">{{ project_name }} - Recuperación de contraseña</mj-text>
-        <mj-text align="center" font-size="16px" padding-left="25px" padding-right="25px" font-family="Arial, Helvetica, sans-serif" color="#555"><span>Hola {{ username }}</span></mj-text>
-        <mj-text align="center" font-size="16px" padding-left="25px" padding-right="25px" font-family="Arial, Helvetica, sans-serif" color="#555">Hemos recibido una petición para reiniciar tu contraseña. Lo puedes hacer dando click en el botón de abajo</mj-text>
-        <mj-button align="center" font-size="18px" background-color="#009688" border-radius="8px" color="#fff" href="{{ link }}" padding="15px 30px">Reiniciar contraseña</mj-button>
-        <mj-text align="center" font-size="16px" padding-left="25px" padding-right="25px" font-family="Arial, Helvetica, sans-serif" color="#555">O puedes copiar y pegar el siguiente link en el navegador</mj-text>
-        <mj-text align="center" font-size="16px" padding-left="25px" padding-right="25px" font-family="Arial, Helvetica, sans-serif" color="#555"><a href="{{ link }}">{{ link }}</a></mj-text>
-        <mj-text align="center" font-size="16px" padding-left="25px" padding-right="25px" font-family="Arial, Helvetica, sans-serif" color="#555">La contraseña va a caducar en {{ valid_hours }} horas.</mj-text>
-        <mj-divider border-color="#ccc" border-width="2px"></mj-divider>
-        <mj-text align="center" font-size="14px" padding-left="25px" padding-right="25px" font-family="Arial, Helvetica, sans-serif" color="#555">Si no hiciste una petición para recuperar tu contraseña, puedes ignorar este correo.</mj-text>
+        <mj-text align="center" padding="35px" font-size="20px" font-family="Arial, Helvetica, sans-serif" color="#333333">{{ project_name }} - Recuperación de contraseña</mj-text>
+        <mj-text align="center" font-size="16px" padding-left="25px" padding-right="25px" font-family="Arial, Helvetica, sans-serif" color="#444444"><span>Hola {{ username }}</span></mj-text>
+        <mj-text align="center" font-size="16px" padding-left="25px" padding-right="25px" font-family="Arial, Helvetica, sans-serif" color="#444444">Hemos recibido una petición para reiniciar tu contraseña. Utiliza el siguiente código para completar el proceso:</mj-text>
+      </mj-column>
+    </mj-section>
+    
+    <mj-section background-color="#f9f9f9" padding="20px">
+      <mj-column>
+        <mj-text align="center" font-size="30px" font-weight="bold" font-family="Arial, Helvetica, sans-serif" color="#333333" letter-spacing="10px">{{ token }}</mj-text>
+      </mj-column>
+    </mj-section>
+    
+    <mj-section background-color="#ffffff" padding="20px">
+      <mj-column>
+        <mj-text align="center" font-size="16px" padding-left="25px" padding-right="25px" font-family="Arial, Helvetica, sans-serif" color="#444444">Este código caducará en 15 minutos por razones de seguridad.</mj-text>
+        <mj-divider border-color="#e0e0e0" border-width="1px" padding-top="20px"></mj-divider>
+        <mj-text align="center" font-size="14px" padding-left="25px" padding-right="25px" font-family="Arial, Helvetica, sans-serif" color="#666666">Si no hiciste una petición para recuperar tu contraseña, puedes ignorar este correo.</mj-text>
       </mj-column>
     </mj-section>
   </mj-body>
